--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec babel-node ./api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "PORT=8000 babel-node ./api/index.js"
+    "start": "babel-node ./api/index.js"
   },
   "keywords": [],
   "author": "",
