--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/register": "^7.6.2",
     "@babel/runtime": "^7.6.3",
+    "@sendgrid/mail": "^6.4.0",
     "babel-loader": "^8.0.6",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
